--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <div class="inside-container join-us-section">
         <div class="row sections-detail">
           <div class="col-12">
-            <h2 class="section-title">Book a 2 month free setup</h2>
+            <h2 class="section-title">Book a 2 Month Free Setup</h2>
           </div>
         </div>
         <div class="row">
