--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="col-12 content-col">
               <h1 class="site-title">Experience the Future of Dining with our Virtual Waiter Bot</h1>
               <p class="site-title-desc">Dining Made Easy, Savings Made Simple</p>
-              <a class="banner-btn" href="#">Contact us now</a>
+              <a class="banner-btn" href="tel:+16474959833">Contact us now</a>
             </div>
           </div>
         </div>
@@ -225,11 +225,12 @@
         <div class="row sections-detail">
           <div class="col-12">
             <h2 class="section-title">Book a 2 Month Free Setup</h2>
+            <p>then $29.99 per month!</p>
           </div>
         </div>
         <div class="row">
           <div class="col-12">
-            <a href="#" class="join-us-btn">Contact us now</a>
+            <a href="tel:+16474959833" class="join-us-btn">Contact us now</a>
             <p class="join-us-call">or Call : <a href="tel:+16474959833" class="join-us-phone-nr">+1 6474959833</a></p>
           </div>
         </div>
