--- a/index.html
+++ b/index.html
@@ -219,8 +219,14 @@
     </div>
 </div>
       <!--Yoga Place-->
-   
-      <!---->
+    <h3>Demo</h3>
+    <div class="video-container">
+        <video width="640" height="360" controls>
+            <source src="img/video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+</body>      <!---->
       <div class="inside-container join-us-section">
         <div class="row sections-detail">
           <div class="col-12">
