--- a/index.html
+++ b/index.html
@@ -219,9 +219,10 @@
     </div>
 </div>
       <!--Yoga Place-->
-    <h3>Demo</h3>
+
+            <h2 class="section-title">Have a look at our virtual waiter bot</h2>
     <div class="video-container">
-        <video width="640" height="360" controls>
+        <video>
             <source src="img/video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
