--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
             <h2 class="section-title">Have a look at our virtual waiter bot</h2>
     <div class="video-container">
-        <video>
+        <video controls>
             <source src="img/video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
