--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="row">
             <div class="col-12 content-col">
               <h1 class="site-title">Experience the Future of Dining with our Virtual Waiter Bot</h1>
-              <p class="site-title-desc">Dining Made Easy, Savings Made Simple</p>
+              <p class="site-title-desc">    Dining Made Easy, Savings Made Simple</p>
               <a class="banner-btn" href="tel:+16474959833">Contact us now</a>
             </div>
           </div>
@@ -238,8 +238,11 @@
         <div class="row">
           <div class="col-12">
             <a href="tel:+16474959833" class="join-us-btn">Contact us now</a>
-            <p class="join-us-call">or Call : <a href="tel:+16474959833" class="join-us-phone-nr">+1 6474959833</a></p>
+            <p class="join-us-call">Call : <a href="tel:+16474959833" class="join-us-phone-nr">+1 6474959833</a></p>
+            <p class="join-us-call">Email : <a href="mailto:info@virtualwaiterbot.com" class="join-us-phone-nr">info@virtualwaiterbot.com</a></p>
+
           </div>
+         
         </div>
       </div>
       <!--Copyright-->
