--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" type="text/css" href="css/normailze.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+
 
     <!--Font-->
     <link rel="stylesheet" type="text/css" href="font/web-font.css">
@@ -44,9 +48,9 @@
         <div class="inside-container banner-content">
           <div class="row">
             <div class="col-12 content-col">
-              <h1 class="site-title">Experience the Future of Dining with our Virtual Waiter Bot</h1>
-              <p class="site-title-desc">    Dining Made Easy, Savings Made Simple</p>
-              <a class="banner-btn" href="tel:+16474959833">Contact us now</a>
+      <h1 class="site-title animate__animated animate__fadeInDown">Experience the Future of Dining with our Virtual Waiter Bot</h1>
+<p class="site-title-desc animate__animated animate__fadeInUp">Dining Made Easy, Savings Made Simple</p>
+<a class="banner-btn animate__animated animate__bounceIn" href="tel:+16474959833">Contact us now</a>
             </div>
           </div>
         </div>
@@ -54,21 +58,21 @@
 <div class="yogaPlace-section">
         <div class="row sections-detail">
           <div class="col-12">
-            <h2 class="section-title">Why Virtual Waiter Bot?</h2>
-            <p class="section-title-desc">Cost Reduction,Customer Satisfaction, Analytics and Marketing </p>
+<h2 class="section-title" data-aos="fade-up">Why Virtual Waiter Bot?</h2>
+            <p class="section-title-desc" data-aos="fade-up">Cost Reduction,Customer Satisfaction, Analytics and Marketing </p>
           </div>
         </div>
         <div class="inside-container ">
           <div class="row yogaPlace-col">
             <div class="col-lg-3">
-              <div class="yogaPlace-img">
-                <img src="img/kundalini-yoga.jpg" class="yogaPlace-in-img" alt="">
+              <div class="yogaPlace-img" data-aos="zoom-in">
+    <img src="img/kundalini-yoga.jpg" class="yogaPlace-in-img animate__animated animate__zoomIn" alt="">
               </div>              
               <a href="#"><h3 class="yogaPlace-title">Cost Reduction</h3></a>
               <p class="yogaPlace-desc">By requiring fewer waitstaff to take orders, the restaurant can distribute resources more effectively.</p>
             </div>
             <div class="col-lg-3">
-              <div class="yogaPlace-img">
+              <div class="yogaPlace-img" data-aos="zoom-in">
                 <img src="img/fig-nelson.jpg" class="yogaPlace-in-img" alt="">
               </div>
               <a href="#"><h3 class="yogaPlace-title">Enhanced Efficiency</h3></a>
@@ -76,14 +80,14 @@
 
             </div>
            <div class="col-lg-3">
-              <div class="yogaPlace-img">
+              <div class="yogaPlace-img" data-aos="zoom-in">
                 <img src="img/Customer_satisfaction.png" class="yogaPlace-in-img" alt="">
               </div>
               <a href="#"><h3 class="yogaPlace-title">Customer Satisfaction</h3></a>
               <p class="yogaPlace-desc">Offer a seamless dining experience that enhances customer satisfaction and loyalty</p>
             </div>
             <div class="col-lg-3">
-              <div class="yogaPlace-img">
+              <div class="yogaPlace-img" data-aos="zoom-in">
                 <img src="img/advanced-yoga-poses.jpg" class="yogaPlace-in-img" alt="">
               </div>
               <a href="#"><h3 class="yogaPlace-title">Analytics & Marketing</h3></a>
@@ -269,5 +273,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+<script>
+  AOS.init();
+</script>
   </body>
 </html>
