--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <a href="tel:+16474959833" class="join-us-btn">Contact us now</a>
+            <a href="tel:+16474959833" class="join-us-btn">Contact us</a>
             <p class="join-us-call">Call : <a href="tel:+16474959833" class="join-us-phone-nr">+1 6474959833</a></p>
             <p class="join-us-call">Email : <a href="mailto:info@virtualwaiterbot.com" class="join-us-phone-nr">info@virtualwaiterbot.com</a></p>
 
