--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <div class="col-lg-8 detail-col-club">
         <p><strong>Placing Order from Virtual Waiter Bot</strong></p>
         <ul>
-    <li class="animate__animated animate__fadeIn animate__delay-1s">Scan the QR code on your table to open the Virtual Waiter Bot. →</li>
+    <li class="animate__animated animate__fadeIn animate__delay-1s">Scan the QR code on your table to open the Virtual Waiter Bot.</li>
     <li class="animate__animated animate__fadeIn animate__delay-1s">Browse the menu, select and customize items, then add them to your cart.</li>
     <li class="animate__animated animate__fadeIn animate__delay-1s">Proceed to checkout, enter your phone and table number, and submit your order.</li>
     <li class="animate__animated animate__fadeIn animate__delay-1s">Your order is sent to the kitchen and will be served to your table.</li>
